# TDFT

./: .gitignore  README.MD  pom.xml
api/: pom.xml
api/src/main/java/dev/wolveringer/tdft/: ResultComparator.java  TestContext.java  TestLogger.java  TestOptions.java
api/src/main/java/dev/wolveringer/tdft/plugin/: Plugin.java
api/src/main/java/dev/wolveringer/tdft/source/: TestSource.java
api/src/main/java/dev/wolveringer/tdft/test/: Helpers.java  Test.java  TestState.java  TestSuite.java  TestUnit.java
core/: .gitignore  pom.xml
core/src/main/cpp/: CMakeLists.txt  compile.sh  native.cpp  native.h
core/src/main/java/dev/wolveringer/: Main.java
core/src/main/java/dev/wolveringer/tdft/: AbstractTestLogger.java  Native.java  SimpleHelper.java  TestExecutor.java  TestResult.java
core/src/main/java/dev/wolveringer/tdft/source/: EclipseProjectSource.java
core/src/main/java/dev/wolveringer/tdft/unit/: PluginManager.java  TestPlugin.java
gui/: pom.xml
gui/src/main/java/dev/wolveringer/tdft/: GuiMain.java  Main.java
gui/src/main/java/dev/wolveringer/tdft/gui/: MainForm.form  MainForm.java  UILogger.java
package/: .gitignore  create.sh
package/TDFT/: start.bat  start.sh
tests/: pom.xml
tests/h3/: pom.xml
tests/h3/src/main/java/dev/wolveringer/tdft/h3/: Dogs.java  PascalsTriangle.java  PluginH3.java
tests/h3/src/main/java/dev/wolveringer/tdft/tests/h3/: Dogs.java  PascalsTriangle.java  PluginH3.java
tests/h4/: pom.xml
tests/h4/src/main/java/dev/wolveringer/tdft/h4/: Matrix.java  Pizza.java  PluginH4.java
